--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,13 +46,12 @@ Source = 'https://github.com/pydantic/pydantic-core'
 dev = ["maturin"]
 testing = [
     { include-group = "dev" },
-    'backports.zoneinfo; python_version < "3.9"',
     'coverage',
     'dirty-equals',
     'inline-snapshot',
     'hypothesis',
     # pandas doesn't offer prebuilt wheels for all versions and platforms we test in CI e.g. aarch64 musllinux
-    'pandas; python_version >= "3.9" and python_version < "3.13" and implementation_name == "cpython" and platform_machine == "x86_64"',
+    'pandas; python_version < "3.13" and implementation_name == "cpython" and platform_machine == "x86_64"',
     'pytest',
     # pytest-examples currently depends on aiohttp via black; we don't want to build it on platforms like aarch64 musllinux in CI
     'pytest-examples; implementation_name == "cpython" and platform_machine == "x86_64"',
@@ -63,7 +62,7 @@ testing = [
     'pytest-timeout',
     'python-dateutil',
     # numpy doesn't offer prebuilt wheels for all versions and platforms we test in CI e.g. aarch64 musllinux
-    'numpy; python_version >= "3.9" and python_version < "3.13" and implementation_name == "cpython" and platform_machine == "x86_64"',
+    'numpy; python_version < "3.13" and implementation_name == "cpython" and platform_machine == "x86_64"',
     'exceptiongroup; python_version < "3.11"',
     'tzdata',
     'typing_extensions',
