ci: fix coverage job (pydantic/pydantic-core#1713)
Original-commit-hash: c0f4a7f69236cac583f58e999c51a2b1eda4d7fd

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,22 +14,15 @@ env:
 
 jobs:
   coverage:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: install rust nightly
-        uses: dtolnay/rust-toolchain@nightly
-
-      - id: cache-rust
-        name: cache rust
-        uses: Swatinem/rust-cache@v2
-
-      - run: cargo install rustfilt coverage-prepare
-        if: steps.cache-rust.outputs.cache-hit != 'true'
-
-      - run: rustup component add llvm-tools-preview
+      # rust-nightly used for `#[coverage(off)]`
+      - uses: dtolnay/rust-toolchain@nightly
+      - uses: Swatinem/rust-cache@v2
+      - uses: taiki-e/install-action@cargo-llvm-cov
 
       - name: install uv
         uses: astral-sh/setup-uv@v6
@@ -39,7 +32,10 @@ jobs:
 
       - run: rustc --version --verbose
 
-      - run: make build-dev
+      - run: |
+          source <(cargo llvm-cov show-env --export-prefix)
+          cargo llvm-cov clean --workspace --profraw-only
+          make build-dev
         env:
           RUST_BACKTRACE: 1
           RUSTFLAGS: '-C instrument-coverage'
@@ -51,9 +47,13 @@ jobs:
       - run: ls -lha
       - run: uv run coverage xml
 
-      - run: coverage-prepare lcov python/pydantic_core/*.so
+      - run: |
+          source <(cargo llvm-cov show-env --export-prefix)
+          cargo llvm-cov --codecov --output-path=codecov.json
 
       - uses: codecov/codecov-action@v5
+        with:
+          files: codecov.json
 
   # See https://github.com/PyO3/pyo3/discussions/2781
   # tests intermittently segfault with pypy and cpython 3.7 when using `coverage run ...`, hence separate job
