--- a/.github/workflows/third-party.yml
+++ b/.github/workflows/third-party.yml
@@ -596,12 +596,14 @@ jobs:
 
       - name: Run Dify unit tests
         run: uv run --project api bash dev/pytest/pytest_unit_tests.sh
+
   test-cadwyn:
     name: Test Cadwyn (main branch) on Python ${{ matrix.python-version }}
     # If 'schedule' was the trigger, don't run it on contributors' forks
     if: |
-      github.event_name != 'schedule' ||
-      (github.event_name == 'schedule' && github.repository == 'pydantic/pydantic')
+      github.event_name == 'workflow_dispatch' ||
+      (github.event_name == 'schedule' && github.repository == 'pydantic/pydantic') ||
+      (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'third-party-tests'))
 
     runs-on: ubuntu-latest
     strategy:
