Remove `typing_extensions` version check in tests (#11830)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -256,6 +256,7 @@ plugins:
         import:
           - url: https://docs.python.org/3/objects.inv
             domains: [py, std]
+          - url: https://typing-extensions.readthedocs.io/en/latest/objects.inv
 - redirects:
     redirect_maps:
       'usage/mypy.md': 'integrations/mypy.md'
