--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
 
       - run: uv pip freeze
 
-      - run: uv run coverage run -m pytest
+      - run: uv run coverage run -m pytest --junitxml=junit.xml -o junit_family=legacy
 
       - run: ls -lha
       - run: uv run coverage xml
@@ -54,6 +54,8 @@ jobs:
       - uses: codecov/codecov-action@v5
         with:
           files: codecov.json
+
+      - uses: codecov/test-results-action@v1
 
   # See https://github.com/PyO3/pyo3/discussions/2781
   # tests intermittently segfault with pypy and cpython 3.7 when using `coverage run ...`, hence separate job
