drop pypy3.9 support, add pypy3.11 support (#1726)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,8 +71,8 @@ jobs:
           - '3.13t'
           - '3.14'
           - '3.14t'
-          - 'pypy3.9'
           - 'pypy3.10'
+          - 'pypy3.11'
 
     runs-on: ubuntu-latest
 
@@ -424,7 +424,7 @@ jobs:
           - os: linux
             manylinux: auto
             target: x86_64
-            interpreter: pypy3.9 pypy3.10 pypy3.11
+            interpreter: pypy3.10 pypy3.11
 
           # musllinux
           - os: linux
@@ -444,7 +444,7 @@ jobs:
             target: x86_64
           - os: macos
             target: aarch64
-            interpreter: 3.9 pypy3.9 pypy3.10 pypy3.11
+            interpreter: 3.9 pypy3.10 pypy3.11
 
           # windows;
           # x86_64 pypy builds are not PGO optimized
@@ -452,7 +452,7 @@ jobs:
           # aarch64 only 3.11 and up, also not PGO optimized
           - os: windows
             target: x86_64
-            interpreter: pypy3.9 pypy3.10 pypy3.11
+            interpreter: pypy3.10 pypy3.11
           - os: windows
             target: i686
             python-architecture: x86
@@ -483,7 +483,7 @@ jobs:
         with:
           target: ${{ matrix.target }}
           manylinux: ${{ matrix.manylinux }}
-          args: --release --out dist --interpreter ${{ matrix.interpreter || '3.9 3.10 3.11 3.12 3.13 3.14 pypy3.9 pypy3.10 pypy3.11' }}
+          args: --release --out dist --interpreter ${{ matrix.interpreter || '3.9 3.10 3.11 3.12 3.13 3.14 pypy3.10 pypy3.11' }}
           rust-toolchain: stable
           docker-options: -e CI
 
