Fix release CI (pydantic/pydantic-core#1733)
Original-commit-link: https://github.com/pydantic/pydantic-core/commit/1802ea5393da656e400b32c3ad2259c20247e769

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -689,7 +689,7 @@ jobs:
       - run: twine check --strict dist/*
 
       - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@v1
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
           skip-existing: true
 
