--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ dependencies = [
     'typing-extensions>=4.13.0',
     'annotated-types>=0.6.0',
     # Keep this in sync with the version in the `check_pydantic_core_version()` function:
-    'pydantic-core==2.35.1',
+    "pydantic-core",
     'typing-inspection>=0.4.0',
 ]
 dynamic = ['version', 'readme']
@@ -184,6 +184,9 @@ markers = [
 [tool.uv]
 default-groups = ['dev']
 required-version = '>=0.7.2'
+
+[tool.uv.sources]
+pydantic-core = { git = "https://github.com/ollz272/pydantic-core", branch = "ser_json_datetime" }
 
 # configuring https://github.com/pydantic/hooky
 [tool.hooky]
