--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ dependencies = [
     'typing-extensions>=4.13.0',
     'annotated-types>=0.6.0',
     # Keep this in sync with the version in the `check_pydantic_core_version()` function:
-    'pydantic-core@git+https://github.com/pydantic/pydantic-core@unset-sentinel',
+    'pydantic-core==2.37.0',
     'typing-inspection>=0.4.0',
 ]
 dynamic = ['version', 'readme']
