Build wheels for GraalPy (pydantic/pydantic-core#1771)
Co-authored-by: Victorien <65306057+Viicos@users.noreply.github.com>
Co-authored-by: David Hewitt <david.hewitt@pydantic.dev>

Original-commit-hash: 46796b60bc9e3d36cc0e58e1df29cdf99b1bccec

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ classifiers = [
     'Programming Language :: Python :: 3.12',
     'Programming Language :: Python :: 3.13',
     'Programming Language :: Python :: 3.14',
+    'Programming Language :: Python :: Implementation :: CPython',
+    'Programming Language :: Python :: Implementation :: PyPy',
+    'Programming Language :: Python :: Implementation :: GraalPy',
     'Programming Language :: Rust',
     'Framework :: Pydantic',
     'Intended Audience :: Developers',
