--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,6 +72,7 @@ jobs:
           - '3.14t'
           - 'pypy3.10'
           - 'pypy3.11'
+          - 'graalpy-3.11'
 
     runs-on: ubuntu-latest
 
@@ -424,6 +425,10 @@ jobs:
             manylinux: auto
             target: x86_64
             interpreter: pypy3.10 pypy3.11
+          - os: linux
+            manylinux: auto
+            target: x86_64
+            interpreter: graalpy3.11
 
           # musllinux
           - os: linux
@@ -485,6 +490,7 @@ jobs:
           args: --release --out dist --interpreter ${{ matrix.interpreter || '3.9 3.10 3.11 3.12 3.13 3.14 pypy3.10 pypy3.11' }}
           rust-toolchain: stable
           docker-options: -e CI
+          before-script-linux: ${{ contains(matrix.interpreter, 'graalpy') && 'manylinux-interpreters ensure-all' || '' }}
 
       - run: ${{ (matrix.os == 'windows' && 'dir') || 'ls -lh' }} dist/
 
